[features]
aura = []
default = [
    'std',
    'aura',
    'with-rocksdb-weights',
]
manual-seal = ['with-rocksdb-weights']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-grandpa/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-ethereum/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
    'pallet-hotfix-sufficients/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-base-fee/std',
    'pallet-dynamic-fee/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-evm-chain-id/std',
    'pallet-evm-precompile-modexp/std',
    'pallet-evm-precompile-sha3fips/std',
    'precompile-balances-erc20/std',
    'pallet-evm-precompile-simple/std',
    'pallet-hotfix-sufficients/std',
    'pallet-collective/std',
    'pallet-root-controller/std',
    'pallet-map-svm-evm/std',
    'pallet-supported-tokens-manager/std',
    'pallet-validator-set/std',
    'pallet-session/std',
    'pallet-im-online/std',
    'pallet-upgrade-runtime-proposal/std',
    'pallet-delegated-transaction/std',
    'stbl-primitives-fee-compatible-api/std',
    'precompile-upgrade-runtime-controller/std',
    'runner/std',
]
with-paritydb-weights = []
with-rocksdb-weights = []

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[package]
authors = ['Stability Solutions']
description = 'Stability protocol Substrate based blockchain'
edition = '2021'
license = 'Unlicense'
name = 'stability-runtime'
publish = false
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [ "derive" ] }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
log = { workspace = true }
# Substrate
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-evm-fee-controller = { workspace = true }
pallet-session = { workspace = true }
pallet-im-online = { workspace = true }
# Frontier
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-hotfix-sufficients = { workspace = true }
# Stability
pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
precompile-utils = { workspace = true }
precompile-balances-erc20 = { workspace = true }
precompile-fee-token-selector = { workspace = true }
precompile-validator-fee-selector = { workspace = true }
pallet-user-fee-selector = { workspace = true }
pallet-validator-fee-selector = { workspace = true }
stbl-tools = { workspace = true }
precompile-validator-controller = { workspace = true }
pallet-root-controller = { workspace = true }
pallet-collective = { workspace = true }
stbl-primitives-fee-compatible-api = { workspace = true }
pallet-erc20-manager = { workspace = true }
pallet-map-svm-evm = { workspace = true }
pallet-supported-tokens-manager = { workspace = true }
precompile-map-svm-evm-controller = { workspace = true }
precompile-supported-tokens-manager = { workspace = true }
pallet-validator-set = { workspace = true }
pallet-upgrade-runtime-proposal = { workspace = true }
precompile-upgrade-runtime-controller = { workspace = true }
runner = { workspace = true }
pallet-delegated-transaction = { workspace = true }

