[package]
name = "stbl-cli-authorship"
version = "1.0.0"
authors = ["Stability Solutions"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Implementation of block-authoring logic."
readme = "README.md"
repository = "https://github.com/stabilityprotocol/stability/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true }
prometheus-endpoint = { workspace = true }
sc-block-builder = { workspace = true }
sc-client-api = { workspace = true }
stbl-proposer-metrics = { workspace = true }
fp-rpc = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
stbl-primitives-fee-compatible-api = { workspace = true, features = ["std"] }
stbl-primitives-zero-gas-transactions-api = { workspace = true, features = [
    "std",
] }
stbl-tools = { workspace = true }
ethereum = { workspace = true }
sp-keystore = { workspace = true }
stability-runtime = { path = "./../../runtime", features = ["std"] }
sc-service = { workspace = true }
account = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["json", "gzip"] }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
hex = { workspace = true }
substrate-test-runtime-client = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
sc-transaction-pool = { workspace = true }
