[package]
name = "sc-keystore"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Keystore (and session key management) for ed25519 based chains like Polkadot."
documentation = "https://docs.rs/sc-keystore"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
array-bytes = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }

[dev-dependencies]
tempfile = "3.1.0"
