[package]
name = "pallet-custom-balances"
version = "0.1.0"
edition = "2021"


[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
stbl-tools = { workspace = true }
pallet-user-fee-selector = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
hex = "0.4"
pallet-evm = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }
pallet-evm-chain-id = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
stbl-core-primitives = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
