[package]
name = "pallet-custom"
version = "1.0.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
    "sp-runtime/std",
    "log/std",
    "sp-std/std",
]
