[package]
name = 'pallet-delegated-transaction'
version = '1.0.0'
edition = '2021'


[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-evm = { workspace = true }
stbl-tools = { workspace = true }
runner = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
once_cell = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
fp-evm = { workspace = true, features = ["std"] }
pallet-evm-chain-id = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "pallet-balances/std",
    "pallet-evm/std",
    "pallet-evm-chain-id/std"
]