[package]
name = "pallet-dnt-fee-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-evm = { workspace = true }
stbl-tools = { workspace = true }
pallet-erc20-manager = { workspace = true }
pallet-user-fee-selector = { workspace = true }
pallet-validator-fee-selector = { workspace = true }
pallet-supported-tokens-manager = { workspace = true }
runner = { workspace = true }
pallet-fee-rewards-vault = { workspace = true }
fp-rpc = { workspace = true }
evm = { workspace = true }

[dev-dependencies]
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-evm-chain-id = { workspace = true, features = ["std"] }
pallet-evm = { workspace = true, features = ["std"] }
precompile-utils = { workspace = true, features = ["testing"] }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"fp-rpc/std",
	"precompile-utils/std",
]
