[package]
name = "pallet-erc20-manager"
version = "0.1.0"
edition = "2021"


[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-evm = { workspace = true }
stbl-tools = { workspace = true }
pallet-supported-tokens-manager = { workspace = true }
sha3 ={ version = "0.10.6", default-features = false}

[dev-dependencies]
hex = { worspace = true }
pallet-evm = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }
pallet-evm-chain-id = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]