[package]
name = "pallet-fee-rewards-vault"
version = "1.0.0"
edition = "2021"


[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-evm = { workspace = true }
stbl-tools = { workspace = true }
staging-xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	'staging-xcm/std',
]
