[package]
name = "pallet-keep-alive"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-keystore = { workspace = true, optional = true }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
stbl-core-primitives = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
pallet-validator-set = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std"
]
try-runtime = ["frame-support/try-runtime"]